k8s/real-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-app
  namespace: real-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: real-app
  template:
    metadata:
      labels:
        app: real-app
    spec:
      containers:
        - name: app
          image: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
