k8s/real-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-app
  namespace: real-app
spec:
  selector:
    app: real-app
  ports:
    - port: 80
      targetPort: 3000
